--- a/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
+++ b/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
@@ -268,7 +268,7 @@ I hope it's clear that this is simply an experiment. I don't see this as a long-
 - No `guard`s for conditional logic
 - No hierarchical or parallel states
 - No `actions` for side effects
-- No ability to add top-level `event`s <Marker index={1} content="Like adding a RESET event to all states in our LightBulb machine by adding a top level <code>on</code> object" />
+- No ability to add top-level `event`s <Marker content="Like adding a RESET event to all states in our LightBulb machine by adding a top level <code>on</code> object" />
 
 ### Conclusion
 
