--- a/src/posts/published/imagination/index.mdx
+++ b/src/posts/published/imagination/index.mdx
@@ -11,17 +11,17 @@ Some of you reading this know that I occasionally dust off the old microphone, f
 
 For the most part, I've received overwhelming praise for my courses. I'm not bragging. Y'all are just incredibly grateful students and I really appreciate it. Receiving praise is a nice side effect of making the educational material.
 
-That doesn't mean my courses aren't without their flaws or shortcomings, though. I am only human after all. <Marker index={1} content="And not always the brightest one at that!" /> The number one complaint I get about my lessons can be boiled down to, "How does this concept apply to _real_ software?" <Marker index={2} content="Or better still, how does this apply to <em>my</em> particular situation?" /> Allow me to address this.
+That doesn't mean my courses aren't without their flaws or shortcomings, though. I am only human after all. <Marker content="And not always the brightest one at that!" /> The number one complaint I get about my lessons can be boiled down to, "How does this concept apply to _real_ software?" <Marker content="Or better still, how does this apply to <em>my</em> particular situation?" /> Allow me to address this.
 
 First, if you've never made educational material, than you might not realize that coming up with a good example is some of the hardest shit to do. It's one thing to have a problem you're trying to solve in the real world. The constraints reveal themselves and it doesn't matter how easy or complex it is, you just have to do the work you have to do.
 
 It's another thing entirely to try and come up with an example that's simple enough for any student to approach while being similar enough to their work that they can imagine how to use it. Pay attention to that line, we'll come back to it.
 
-You have to understand something, and it's something I think is lost on a lot of people who watch egghead videos. One thing people fail to really grasp about egghead is that there is a _style_ to an egghead lesson. There's no fluff, nothing frivolous or extraneous at all. It is direct and to the point. <Marker index={3} content="Unlike my writing." /> Demonstration in favor of explanation. Thus, for all of you who have asked me to go further and explain _when_ or _why_ you would use a technique and have been disappointed that I didn't, can you understand why there simply isn't room for that within that context?
+You have to understand something, and it's something I think is lost on a lot of people who watch egghead videos. One thing people fail to really grasp about egghead is that there is a _style_ to an egghead lesson. There's no fluff, nothing frivolous or extraneous at all. It is direct and to the point. <Marker content="Unlike my writing." /> Demonstration in favor of explanation. Thus, for all of you who have asked me to go further and explain _when_ or _why_ you would use a technique and have been disappointed that I didn't, can you understand why there simply isn't room for that within that context?
 
 An egghead lesson is not the time to philosophize or enumerate all the possibilities for a technique. No, it is the time to get to the meat and potatoes of what you're teaching in the most succinct way possible. To that end, my examples are often contrived and lacking in depth or nuance. It's not that I'm not capable, it's that it doesn't suit the goals we're going for.
 
-I don't actually see a problem with this mode of teaching, because, and here's the crux of my thesis, _it is the responsibility of the developer or engineer_ <Marker index={4} content="or any human being for that matter." /> _to be able to take the materials they are given and cultivate their imagination such that they can use the information in new ways, applied to new contexts._ In other words, it's your job to learn how to remix what you learn into something more. Key words: **your job**. Not my job. **Your job**.
+I don't actually see a problem with this mode of teaching, because, and here's the crux of my thesis, _it is the responsibility of the developer or engineer_ <Marker content="or any human being for that matter." /> _to be able to take the materials they are given and cultivate their imagination such that they can use the information in new ways, applied to new contexts._ In other words, it's your job to learn how to remix what you learn into something more. Key words: **your job**. Not my job. **Your job**.
 
 It is not my job as an educator to try and figure out a way to teach you all the ways in which you can use a technique or API. That would be insane! Almost everything has an infinite number of applications, it would be terribly difficult to cover even a moderate number of use cases. However, if I teach you concepts and give you the skills to _apply_ that knowledge to other situations, then we can actually achieve something useful.
 
@@ -35,7 +35,7 @@ I want to give y'all the benefit of the doubt. Software is hard. Sometimes reall
 
 That being said, I have no patience for someone who is acting _lazy_. I ain't got time to hold someone's hand who doesn't want to work hard with me. I don't have the energy to carry you all the way to your epiphany or realization. You gotta work with me! Failing to exercise that gift of a brain you have, failing to even try to imagine other uses and scenarios for a lesson or technique, that's _lazy_, and it's not cool.
 
-Look, I fundamentally believe we all have laziness in us. For hundreds of thousands of years, our hunter-gatherer ancestors worked far fewer hours than we do and socialized and leisured a whole lot more. <Marker index={5} content="I've read that some anthropologists hypothesize that the average person only needed to work 10 hours in a week to supply all their needs. Can you imagine only working 10 hours? I mean you'd also have to imagine wild animals possibly attacking you, but it might be worth it for only working 10 hours. Just saying." /> I think it's in our DNA to take things easy from time to time. But learning something new probably isn't the time to do that. This is the time to be active, to be alert, to be imaginative.
+Look, I fundamentally believe we all have laziness in us. For hundreds of thousands of years, our hunter-gatherer ancestors worked far fewer hours than we do and socialized and leisured a whole lot more. <Marker content="I've read that some anthropologists hypothesize that the average person only needed to work 10 hours in a week to supply all their needs. Can you imagine only working 10 hours? I mean you'd also have to imagine wild animals possibly attacking you, but it might be worth it for only working 10 hours. Just saying." /> I think it's in our DNA to take things easy from time to time. But learning something new probably isn't the time to do that. This is the time to be active, to be alert, to be imaginative.
 
 You need to cultivate your imagination. You need to improve your ability to think _divergently_. That skill, more so than any engineering/dev technique itself, is what will unlock potential in your career, and maybe in your life. So I'm pleading with you, before you criticize me, or another person with something like the complaint above, be sure to take a minute and try to use your imagination. Try and remix that shit.
 
