--- a/src/posts/published/just-enough-fp-pointfree/index.mdx
+++ b/src/posts/published/just-enough-fp-pointfree/index.mdx
@@ -13,6 +13,7 @@ relatedPostsSlugs:
     'just-enough-fp-partial-application',
     'just-enough-fp-argument-order',
   ]
+relevantCourseNickname: 'fp'
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
@@ -80,7 +81,7 @@ The steps in this algorithm are pretty simple: lower case the string and replace
 const strings = [
   'Portland summers are amazing',
   'I like big beards and I cannot lie',
-  'I am out of ideas for strings' // ha
+  'I am out of ideas for strings', // ha
 ]
 
 const slugs = strings.map(str =>
