--- a/src/posts/published/just-enough-fp-pure-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-pure-functions/index.mdx
@@ -12,6 +12,7 @@ relatedPostsSlugs:
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
   ]
+relevantCourseNickname: 'fp'
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
@@ -59,7 +60,7 @@ const generateID = () => Math.floor(Math.random() * 10000)
 const friendFactory = (name, age) => ({
   id: generateID(),
   name,
-  age
+  age,
 })
 ```
 
