--- a/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
@@ -13,6 +13,7 @@ relatedPostsSlugs:
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
   ]
+relevantCourseNickname: 'fp'
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
@@ -45,10 +46,7 @@ In just 30 minutes, you'll learn more than "just enough".
     <a href="https://twitter.com/eggheadio?ref_src=twsrc%5Etfw">@eggheadio</a>!{' '}
     <a href="https://t.co/PfdODXviOG">https://t.co/PfdODXviOG</a>
   </p>
-  &mdash; Kyle Shevlin (@kyleshevlin){' '}
-  <a href="https://twitter.com/kyleshevlin/status/1109158892469010432?ref_src=twsrc%5Etfw">
-    March 22, 2019
-  </a>
+  &mdash; Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/1109158892469010432?ref_src=twsrc%5Etfw">March 22, 2019</a>
 </blockquote>
 <script
   async
