--- a/src/posts/published/just-enough-fp-composition/index.mdx
+++ b/src/posts/published/just-enough-fp-composition/index.mdx
@@ -14,6 +14,7 @@ relatedPostsSlugs:
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
   ]
+relevantCourseNickname: 'fp'
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
