--- a/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
@@ -12,6 +12,7 @@ relatedPostsSlugs:
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
   ]
+relevantCourseNickname: 'fp'
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
